# Samhita

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
src/samhita/: __init__.py  benchmark.py  cli.py  config.py
src/samhita/core/: __init__.py  bootstrap.py  llm.py  prompts.py  recipes.py  schemas.py
src/samhita/core/fetchers/: __init__.py  _helpers.py  chembl.py  drugbank.py  opentargets.py
src/samhita/core/llm_clients/: __init__.py  anthropic.py  kimi.py
src/samhita/core/tools/: __init__.py  extract.py  fetch.py  normalize.py  write.py
src/samhita/orchestrators/: __init__.py  base.py  custom_driver.py  langgraph_driver.py  registry.py
tests/: test_benchmark.py  test_cli.py  test_extract_tool.py  test_fetch_tools.py  test_fetchers.py  test_kimi_client.py  test_langgraph_driver.py  test_langgraph_end_to_end.py  test_llm_clients.py  test_normalize_tools.py  test_orchestrator_registry.py  test_recipes.py  test_schemas.py  test_tool_registry.py  test_version.py  test_write_tool.py
