[project]
name = "samhita"
version = "0.0.1"
description = "The compendium-builder for biomedical knowledge — natural-language-driven knowledge graph construction."
authors = [
    { name = "Ayush Praveen" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "knowledge-graph",
    "biomedical",
    "biocypher",
    "llm-agent",
    "mcp",
    "langgraph",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # KG backend
    "biocypher>=0.12.5",
    "neo4j>=5.20.0",
    # Full-text ingestion
    "pmcgrab>=1.0.6",
    # HTTP / data sources
    "httpx>=0.27.0",
    "requests>=2.32.0",
    # Schemas + validation
    "pydantic>=2.7.0",
    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # LLM clients
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Structured output
    "instructor>=1.5.0",
    # CLI + UX
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]
ui = [
    "streamlit>=1.38.0",
]

[project.scripts]
samhita = "samhita.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/samhita"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
